refatorações gerais, criação do modulo user e authenticate, tratamento de erros e status http
