# src/modules/accounts/entities/User.ts
@@ -1,15 +1,25 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuid } from "uuid";
-@Entity("specifications")
-class Specification {
+
+@Entity("users")
+class User {
 	@PrimaryColumn()
-	id?: string;
+	id: string;
 
 	@Column()
 	name: string;
 
 	@Column()
-	description: string;
+	password: string;
+
+	@Column()
+	email: string;
+
+	@Column()
+	driver_license: string;
+
+	@Column()
+	isAdmin: boolean;
 
 	@CreateDateColumn()
 	createdAt: Date;
@@ -21,4 +31,4 @@ class Specification {
 	}
 }
 
-export { Specification };
+export { User };
