# src/routes/specifications.routes.ts
@@ -1,10 +1,13 @@
 import { Router } from "express";
-import { createSpecificationController } from "../modules/cars/useCases/CreateSpecification";
+import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
+import { CreateSpecificationController } from "../modules/cars/useCases/CreateSpecification/CreateSpecificationController";
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post("/", (req, res) => {
-   return createSpecificationController.handle(req, res);
-})
+const createSpecificationController = new CreateSpecificationController();
 
-export { specificationsRoutes }
+specificationsRoutes.use(ensureAuthenticated);
+
+specificationsRoutes.post("/", createSpecificationController.handle);
+
+export { specificationsRoutes };
