# src/swagger.json
@@ -1,159 +1,153 @@
 {
-  "openapi": "3.0.0",
-  "info": {
-    "title": "RentalX Documentation",
-    "description": "This is an API Rent",
-    "version": "1.0.0",
-    "contact": {
-      "email": "mahh@cia.com"
-    }
-  },
-  "paths": {
-    "/categories": {
-      "post": {
-        "tags": ["Category"],
-        "sumary": "Create a category",
-        "description": "Create a new Category",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
-                "example": {
-                  "name": "category name sample",
-                  "description": "category description sample"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Created new Category"
-          },
-          "500": {
-            "description": "Category already exists"
-          }
-        }
-      },
-      "get": {
-        "tags": ["Category"],
-        "sumary": "List all Category",
-        "description": "List all Category",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "itens": {
-                    "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string"
-                      },
-                      "description": {
-                        "type": "string"
-                      }
-                    },
-                    "example": [
-                      {
-                        "id": "5b93a494-bbed-4005-80d9-4142d35dc4c0",
-                        "name": "SUV",
-                        "description": "Categoria de carro SUV",
-                        "createdAt": "2022-03-12T20:05:13.969Z"
-                      }
-                    ]
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "categories/import": {
-      "post": {
-        "tags": ["Category"],
-        "sumary": "Import Categories",
-        "description": "Import Categories to file",
-        "consumes": "multipart/form-data",
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "properties": {
-                  "file": {
-                    "type": "csv",
-                    "itens": {
-                      "type": "string",
-                      "format": "utf-8",
-                      "properties": {
-                        "name": {
-                          "type": "string"
-                        },
-                        "description": {
-                          "type": "string"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Import new Category"
-          }
-        }
-      }
-    },
-    "/specifications": {
-      "post": {
-        "tags": ["Specifications"],
-        "sumary": "Create Specifications",
-        "description": "Create new Specifications",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
-                "example": {
-                  "name": "specification name sample",
-                  "description": "specification description sample"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Created new specifications"
-          },
-          "500": {
-            "description": "Specifications already exists"
-          }
-        }
-      }
-    }
-  }
+	"openapi": "3.0.0",
+	"info": {
+		"title": "RentX Documentation",
+		"description": "This is an API Rent",
+		"version": "1.0.0",
+		"contact": {
+			"email": "mahh@cia.com"
+		}
+	},
+	"paths": {
+		"/categories": {
+			"post": {
+				"tags": ["Category"],
+				"summary": "Create a category",
+				"description": "Create a new Category",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"name": {
+										"type": "string"
+									},
+									"description": {
+										"type": "string"
+									}
+								},
+								"example": {
+									"name": "category name sample",
+									"description": "category description sample"
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Created new Category"
+					},
+					"500": {
+						"description": "Category already exists"
+					}
+				}
+			},
+			"get": {
+				"tags": ["Category"],
+				"summary": "List all Category",
+				"description": "List all Category",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"itens": {
+										"type": "object",
+										"properties": {
+											"name": {
+												"type": "string"
+											},
+											"description": {
+												"type": "string"
+											}
+										},
+										"example": [
+											{
+												"id": "5b93a494-bbed-4005-80d9-4142d35dc4c0",
+												"name": "SUV",
+												"description": "Categoria de carro SUV",
+												"createdAt": "2022-03-12T20:05:13.969Z"
+											}
+										]
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/categories/import": {
+			"post": {
+				"tags": ["Category"],
+				"summary": "Upload a new category",
+				"description": "Upload a new category",
+				"requestBody": {
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Created new Category"
+					}
+				}
+			}
+		},
+		"/specifications": {
+			"post": {
+				"tags": ["Specifications"],
+				"summary": "Create specification",
+				"description": "Create new Specification",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/definitions/Specification"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Created new specifications"
+					},
+					"500": {
+						"description": "Specifications already exists"
+					}
+				}
+			}
+		}
+	},
+	"definitions": {
+		"Specification": {
+			"type": "object",
+			"properties": {
+				"name": {
+					"type": "string"
+				},
+				"description": {
+					"type": "string"
+				}
+			},
+			"example": {
+				"name": "specification name sample",
+				"description": "specification description sample"
+			}
+		}
+	}
 }
